--- a/big_ds.ipynb
+++ b/big_ds.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### Guest Lecture in Introduction to Data Science at TAU / Prof. Saharon Rosset\n",
     "### Giora Simchoni\n",
-    "### June 4th, 2019"
+    "### June 22nd, 2020"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "\n",
     "* Nodes on the same rack are connected, and racks are connected by a network or \"switch\"\n",
     "\n",
-    "<img src = \"images/computer_cluster.png\">"
+    "<img src = \"./images/computer_cluster.png\">"
    ]
   },
   {
@@ -680,7 +680,7 @@
     {
      "data": {
       "text/plain": [
-       "ParallelCollectionRDD[0] at parallelize at PythonRDD.scala:195"
+       "ParallelCollectionRDD[0] at readRDDFromFile at PythonRDD.scala:262"
       ]
      },
      "execution_count": 8,
@@ -818,7 +818,7 @@
     {
      "data": {
       "text/plain": [
-       "[[1], [2], [3], [4, 5]]"
+       "[[], [1], [], [2], [3], [], [4], [5]]"
       ]
      },
      "execution_count": 13,
@@ -950,7 +950,7 @@
     {
      "data": {
       "text/plain": [
-       "5015"
+       "9015"
       ]
      },
      "execution_count": 18,
@@ -1077,7 +1077,7 @@
    },
    "outputs": [],
    "source": [
-    "shakespeare = sc.textFile('/home/jovyan/hadoop_example/shakespeare')"
+    "shakespeare = sc.textFile('hadoop_example/shakespeare/*')"
    ]
   },
   {
@@ -1451,8 +1451,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "351\n",
-      "111\n"
+      "362\n",
+      "100\n"
      ]
     }
    ],
@@ -1478,7 +1478,7 @@
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+\n",
       "|sbp|tobacco| ldl|adiposity|famhist|typea|obesity|alcohol|age|chd|            features|label|\n",
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+\n",
-      "|102|    0.4|3.41|    17.22|Present|   56|  23.59|   2.06| 39|  1|[102.0,0.4,3.41,1...|  1.0|\n",
+      "|101|   0.48|7.26|     13.0| Absent|   50|  19.82|   5.19| 16|  0|[101.0,0.48,7.26,...|  0.0|\n",
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+\n",
       "only showing top 1 row\n",
       "\n"
@@ -1528,8 +1528,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficients: [0.008408247604829246,0.0819338712417374,0.1844407014226751,0.031730852428542095,-0.9351098151988192,0.03907230665069162,-0.09409933142418063,0.0016123733510384239,0.028466557617748908]\n",
-      "Intercept: -4.259414174733452\n"
+      "Coefficients: [0.00129902161382201,0.07268020148984834,0.2174340350187219,0.0021612609181482826,-0.7996643787786133,0.03229365612393295,-0.05282631703787926,0.0017741654718499843,0.06347927905214099]\n",
+      "Intercept: -5.0743059336551175\n"
      ]
     }
    ],
@@ -1560,8 +1560,8 @@
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+\n",
       "|sbp|tobacco| ldl|adiposity|famhist|typea|obesity|alcohol|age|chd|            features|label|       rawPrediction|         probability|prediction|\n",
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+\n",
-      "|101|   0.48|7.26|     13.0| Absent|   50|  19.82|   5.19| 16|  0|[101.0,0.48,7.26,...|  0.0|[2.00202242646562...|[0.88100925630563...|       0.0|\n",
-      "|108|    0.0|1.43|    26.26| Absent|   42|  19.38|    0.0| 16|  0|[108.0,0.0,1.43,2...|  0.0|[2.91657410259036...|[0.94865969878719...|       0.0|\n",
+      "|103|   0.03|4.21|    18.96| Absent|   48|  22.94|   2.62| 18|  0|[103.0,0.03,4.21,...|  0.0|[3.29608076815384...|[0.96429411302597...|       0.0|\n",
+      "|106|   1.08|4.37|    26.08| Absent|   67|  24.07|  17.74| 28|  1|[106.0,1.08,4.37,...|  1.0|[1.95018796785011...|[0.87546713634656...|       0.0|\n",
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+\n",
       "only showing top 2 rows\n",
       "\n"
@@ -1597,7 +1597,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.78\n"
+      "Test accuracy: 0.68\n"
      ]
     }
    ],
@@ -1618,7 +1618,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test AUC: 0.83\n"
+      "Test AUC: 0.73\n"
      ]
     }
    ],
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1655,7 +1655,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.75\n"
+      "Test accuracy: 0.68\n"
      ]
     }
    ],
@@ -1677,14 +1677,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test AUC: 0.79\n"
+      "Test AUC: 0.71\n"
      ]
     }
    ],
@@ -1712,7 +1712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
