Fixes typos in slides

--- a/big_ds.ipynb
+++ b/big_ds.ipynb
@@ -8,11 +8,11 @@
     }
    },
    "source": [
-    "# \"Big\" Data Science\n",
+    "### \"Big\" Data Science\n",
     "\n",
     "### Guest Lecture in Introduction to Data Science at TAU / Prof. Saharon Rosset\n",
     "### Giora Simchoni\n",
-    "### June 22nd, 2020"
+    "### June 23rd, 2020"
    ]
   },
   {
@@ -31,7 +31,7 @@
     "\n",
     "(2) \"[Big Data] is data so large it does not fit in main memory\" (Leskovec et al., Mining of Massive Datasets)\n",
     "\n",
-    "Or maybe we should define the size of our data according how easy it is to process and understand it?\n",
+    "Or maybe we should define the size of our data according to how easy it is to process and understand it?\n",
     "\n",
     "\n",
     "(3) \"[Small Data is] data that has small enough size for human comprehension.\" ([jWork.ORG](jWork.ORG))\n",
@@ -72,7 +72,7 @@
    "source": [
     "# Distributed File System (DFS)\n",
     "\n",
-    "* Typically: [HDFS (Hadoop Distributed File System)](https://hadoop.apache.org/docs/r1.2.1/hdfs_design.html), another open source project by [Apache](https://www.apache.org/)\n",
+    "* Typically: [HDFS (Hadoop Distributed File System)](https://hadoop.apache.org/), another open source project by [Apache](https://www.apache.org/)\n",
     "\n",
     "* \"Computers\" (nodes) are stacked in racks of 8-64 size each.\n",
     "\n",
@@ -692,7 +692,7 @@
     "from pyspark import SparkContext\n",
     "\n",
     "sc = SparkContext()\n",
-    "rdd = sc.parallelize([1,2,3,4,5])\n",
+    "rdd = sc.parallelize([1,2,3,4,5], 4)\n",
     "rdd"
    ]
   },
@@ -818,7 +818,7 @@
     {
      "data": {
       "text/plain": [
-       "[[], [1], [], [2], [3], [], [4], [5]]"
+       "[[1], [2], [3], [4, 5]]"
       ]
      },
      "execution_count": 13,
@@ -950,7 +950,7 @@
     {
      "data": {
       "text/plain": [
-       "9015"
+       "5015"
       ]
      },
      "execution_count": 18,
@@ -1451,8 +1451,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "362\n",
-      "100\n"
+      "374\n",
+      "88\n"
      ]
     }
    ],
@@ -1522,14 +1522,18 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficients: [0.00129902161382201,0.07268020148984834,0.2174340350187219,0.0021612609181482826,-0.7996643787786133,0.03229365612393295,-0.05282631703787926,0.0017741654718499843,0.06347927905214099]\n",
-      "Intercept: -5.0743059336551175\n"
+      "Coefficients: [0.009260570445916523,0.0788486946420192,0.1662444813477797,0.022566142657327527,-0.7041656467563279,0.040871728462501714,-0.06983394060234696,-0.006510927409719812,0.04231159447367855]\n",
+      "Intercept: -5.422972995540954\n"
      ]
     }
    ],
@@ -1560,8 +1564,8 @@
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+\n",
       "|sbp|tobacco| ldl|adiposity|famhist|typea|obesity|alcohol|age|chd|            features|label|       rawPrediction|         probability|prediction|\n",
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+\n",
-      "|103|   0.03|4.21|    18.96| Absent|   48|  22.94|   2.62| 18|  0|[103.0,0.03,4.21,...|  0.0|[3.29608076815384...|[0.96429411302597...|       0.0|\n",
-      "|106|   1.08|4.37|    26.08| Absent|   67|  24.07|  17.74| 28|  1|[106.0,1.08,4.37,...|  1.0|[1.95018796785011...|[0.87546713634656...|       0.0|\n",
+      "|108|    3.0|1.59|    15.23| Absent|   40|  20.09|  26.64| 55|  0|[108.0,3.0,1.59,1...|  0.0|[1.89684801054186...|[0.86953436653892...|       0.0|\n",
+      "|109|    1.2|6.14|    29.26| Absent|   47|  24.72|  10.46| 40|  0|[109.0,1.2,6.14,2...|  0.0|[1.52305587620415...|[0.82098803319683...|       0.0|\n",
       "+---+-------+----+---------+-------+-----+-------+-------+---+---+--------------------+-----+--------------------+--------------------+----------+\n",
       "only showing top 2 rows\n",
       "\n"
@@ -1597,7 +1601,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.68\n"
+      "Test accuracy: 0.81\n"
      ]
     }
    ],
@@ -1612,13 +1616,17 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test AUC: 0.73\n"
+      "Test AUC: 0.81\n"
      ]
     }
    ],
@@ -1655,7 +1663,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.68\n"
+      "Test accuracy: 0.72\n"
      ]
     }
    ],
@@ -1678,13 +1686,17 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test AUC: 0.71\n"
+      "Test AUC: 0.72\n"
      ]
     }
    ],
